--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^14.4.3",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "autosuggest-highlight": "^3.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -38,8 +38,13 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
+    "jest": "^29.7.0",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vitest": "latest"
-  }
+  },
+    "jest": {
+      "preset": "react"
+    }
 }
