2 Tests passed | 1 Failed

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["./src", ".src/test/setup.tsx"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["./src", ".src/test/setup.tsx"]
 }
