--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/autosuggest-highlight": "^3.2.3",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.19",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
@@ -38,13 +39,11 @@
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "jsdom": "^24.0.0",
     "jest": "^29.7.0",
+    "jsdom": "^24.0.0",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.0",
     "vitest": "latest"
-  },
-    "jest": {
-      "preset": "react"
-    }
+  }
 }
