--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ui": "vitest --ui",
-    "coverage":"vitest --coverage"
+    "coverage": "vitest --coverage"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -18,12 +18,15 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@supabase/supabase-js": "^2.42.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "autosuggest-highlight": "^3.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.1",
     "react-router-dom": "^6.22.1",
     "styled-components": "^6.1.8"
   },
@@ -43,8 +46,10 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
     "jsdom": "^24.0.0",
+    "redux-logger": "^3.0.6",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.2.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5",
     "vite": "^5.1.0",
     "vitest": "latest"
   }
